--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/main.css" rel="stylesheet">
   <link rel="icon" href="data:,">
-  <title>Fruits!</title>
+  <title>Magical Flower Market</title>
 </head>
 
 <body>
