interfaced handlebars with database from Jodie

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,7 +5,7 @@
 <li class="card">
   <div class = "flower">
     <span class = "title"> {{name}} </span>
-    <img src = {{image_url}}>
+    <img src = {{image}}>
     <h3> {{power}} </h3>
     <p> {{description}}</p>
   </div>
