--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -10,8 +10,8 @@
 
   <label for="powers" class="label"> Power </label>
   <select id="powers" name="powerId">
-    {{#each power}}
-    <option value="{{id}}" {{selected}}>{{name}}</option>
+    {{#each powers}}
+    <option value="{{id}}">{{name}}</option>
     {{/each}}
   </select>
 
