get home page flowers to update with power and description

--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -9,7 +9,7 @@
   <input type="text" id="name" name="name" placeholder="Flower name" value="{{flower.name}}">
 
   <label for="powers" class="label"> Power </label>
-  <select id="powers" name="powerId">
+  <select id="powers" name="power_id">
     {{#each powers}}
     <option value="{{id}}">{{name}}</option>
     {{/each}}
