--- a/public/main.css
+++ b/public/main.css
@@ -2,10 +2,38 @@ body {
   margin: 0;
   padding: 0;
   background-color: #fbe3ad;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Comfortaa', cursive;
   box-sizing: border-box;
   text-align: center;
+  font-style: normal;
 }
+
+h2 {
+  margin: 100px 100px
+}
+
+button {
+  margin-top: 50px;
+  background-color: #ECF6FA;
+  color: black;
+  border: 2px solid #fbe3ad;
+  border-radius: 12px;
+  font-family: 'Comfortaa', cursive;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 50px;
+  padding-left: 50px
+}
+
+button {
+  transition-duration: 0.4s;
+}
+
+button:hover {
+  background-color: #fbe3ad;
+  color: black;
+}
+
 
 header {
   color: white;
@@ -21,6 +49,7 @@ h1 {
   padding: 90px 0;
   margin: 0;
   font-size: 3.5rem;
+  font-family: 'Henny Penny', cursive;
 }
 
 ul {
@@ -32,7 +61,7 @@ ul {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-around;
   margin: 0 3rem 2rem 3rem;
 }
 
@@ -54,5 +83,7 @@ ul {
   margin-top: 20px
 }
 
-.name {font-weight: 600;
-      font-size: larger ;}
+.name {
+  font-size: larger;
+  font-weight: bold;
+}
