--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/main.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Henny+Penny&display=swap" rel="stylesheet">
   <link rel="icon" href="data:,">
   <title>Magical Flower Market</title>
 </head>
