--- a/public/main.css
+++ b/public/main.css
@@ -27,3 +27,30 @@ ul {
   list-style: none;
   padding: 0;
 }
+
+.input {
+  width: 100%;
+  padding: .5rem;
+  margin-bottom: .5rem; 
+}
+
+.form {
+  width: 200px;
+  margin: auto;
+}
+
+.dropdown {
+  /* width: 300px; */
+  height: 50px;
+
+}
+
+.list {
+  height: 30px;
+  width: 200px;
+  padding: 0;
+  border: 0;
+  background: white;
+  text-align: center;
+}
+
